--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <button class="show-modal">Show modal</button>
 
-    <div class="modal"> <!-- tu sa hned po nacitani stranky prida druhy class pomocou JS -->
+    <div class="modal"> <!-- tu sa prida druhy class pomocou JS -->
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 😍</h1>
       <p>
